Update: Enhanced face clustering application with improved UI and auto-refresh

--- a/static/index.html
+++ b/static/index.html
@@ -840,6 +840,14 @@
                                 <input type="checkbox" id="postValidateCheckbox">
                                 Пост-валидация (возврат в исходную папку)
                             </label>
+                            <label style="display: flex; align-items: center; gap: 5px; font-size: 14px;">
+                                <input type="checkbox" id="globalClusteringCheckbox">
+                                Глобальная кластеризация
+                            </label>
+                            <label style="display: flex; align-items: center; gap: 5px; font-size: 14px;">
+                                <input type="checkbox" id="continuousNumberingCheckbox">
+                                Непрерывная нумерация
+                            </label>
                             <button class="action-btn general" id="includeExcludedBtn">
                                 📂 Общие
                             </button>
@@ -909,6 +917,6 @@
         </div>
     </div>
 
-    <script src="/static/app.js?v=2"></script>
+    <script src="/static/app.js?v=3"></script>
 </body>
 </html>
